--- a/pipelines/dockerfiles.yml
+++ b/pipelines/dockerfiles.yml
@@ -5,6 +5,7 @@ groups:
   - minimal-docker-image
   - golang-docker-image
   - deployment-docker-image
+  - cf-deployment-concourse-tasks-w-gcloud-image
 
 resource_types:
 - name: slack-notification
@@ -38,11 +39,33 @@ resources:
     paths:
     - dockerfiles/minimal
 
+- name: cf-deployment-concourse-tasks-w-gcloud-dockerfile
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry/infrastructure-ci
+    branch: master
+    paths:
+    - dockerfiles/cf-deployment-concourse-tasks-w-gcloud
+
 - name: ubuntu-docker-image
   type: docker-image
   source:
     repository: ubuntu
     tag: "14.04"
+
+- name: cf-deployment-concourse-tasks-image
+  type: docker-image
+  source:
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+    tag: v3.15.0
+
+- name: cf-deployment-concourse-tasks-w-gcloud-image
+  type: docker-image
+  source:
+    repository: cfinfrastructure/cf-deployment-concourse-tasks-w-gcloud
+    username: {{docker-username}}
+    password: {{docker-password}}
+    email: {{docker-email}}
 
 - name: minimal-docker-image
   type: docker-image
@@ -142,6 +165,25 @@ jobs:
     - put: deployment-docker-image
       params:
         build: infrastructure-ci/dockerfiles/deployment
+        cache: false
+      on_failure:
+        put: slack-alert
+        params:
+          text: {{slack_failure_text}}
+
+- name: cf-deployment-concourse-tasks-w-gcloud-image
+  public: true
+  plan:
+  - do:
+    - aggregate:
+      - get: cf-deployment-concourse-tasks-image
+        trigger: true
+      - get: infrastructure-ci
+        resource: cf-deployment-concourse-tasks-w-gcloud-dockerfile
+        trigger: true
+    - put: cf-deployment-concourse-tasks-w-gcloud-image
+      params:
+        build: infrastructure-ci/dockerfiles/cf-deployment-concourse-tasks-w-gcloud
         cache: false
       on_failure:
         put: slack-alert
