--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -47,13 +47,10 @@ resources:
     branch: master
     uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
 
-- name: cf-deployment-concourse-tasks-bbl-dev-docker-image
+- name: cf-deployment-concourse-tasks-w-gcloud-image
   type: docker-image
   source:
-    repository: cfinfrastructure/cf-deployment-concourse-tasks-bbl-dev
-    username: {{docker-username}}
-    password: {{docker-password}}
-    email: {{docker-email}}
+    repository: cfinfrastructure/cf-deployment-concourse-tasks-w-gcloud
 
 - name: consul-release-develop
   type: git
@@ -665,7 +662,7 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
     - get: ops-files
       resource: empty-ops-files
     - get: cf-deployment
@@ -677,7 +674,6 @@ jobs:
     - get: cats-concourse-task
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -696,13 +692,13 @@ jobs:
     on_failure:
       task: bbl-destroy
       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
       input_mapping:
         bbl-state: updated-bbl-state
       params:
         BBL_STATE_DIR: consul-cf-cats
   - task: add-to-gcp-dns
     file: ci/scripts/common/manage-gcp-dns/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_STATE_DIR: consul-cf-cats
       GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -717,6 +713,7 @@ jobs:
       do:
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
+        image: cf-deployment-concourse-tasks-w-gcloud-image
         params:
           BBL_STATE_DIR: consul-cf-cats
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -729,18 +726,20 @@ jobs:
           bbl-states-repo: updated-bbl-state
       - task: bbl-destroy
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: consul-cf-cats
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+          BBL_GCP_REGION: {{gcp_region}}
+          BBL_GCP_ZONE: {{gcp_zone}}
       - put: infrastructure-ci-bbl-states
         params:
           repository: updated-bbl-state
           rebase: true
   - task: upload-stemcell
     file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     params:
       BBL_STATE_DIR: consul-cf-cats
     input_mapping:
@@ -749,6 +748,7 @@ jobs:
       do:
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
+        image: cf-deployment-concourse-tasks-w-gcloud-image
         params:
           BBL_STATE_DIR: consul-cf-cats
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -765,13 +765,16 @@ jobs:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: consul-cf-cats
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+          BBL_GCP_REGION: {{gcp_region}}
+          BBL_GCP_ZONE: {{gcp_zone}}
       - put: infrastructure-ci-bbl-states
         params:
           repository: updated-bbl-state
           rebase: true
   - task: deploy
     file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     params:
       BBL_STATE_DIR: consul-cf-cats
       SYSTEM_DOMAIN: consul-cf-cats.infrastructure.cf-app.com
@@ -784,20 +787,19 @@ jobs:
       do:
       - task: delete-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         params:
           BBL_STATE_DIR: consul-cf-cats
         input_mapping:
           bbl-state: updated-bbl-state
       - task: cleanup-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         params:
           BBL_STATE_DIR: consul-cf-cats
         input_mapping:
           bbl-state: updated-bbl-state
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
+        image: cf-deployment-concourse-tasks-w-gcloud-image
         params:
           BBL_STATE_DIR: consul-cf-cats
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -810,18 +812,20 @@ jobs:
           bbl-states-repo: updated-bbl-state
       - task: bbl-destroy
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: consul-cf-cats
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+          BBL_GCP_REGION: {{gcp_region}}
+          BBL_GCP_ZONE: {{gcp_zone}}
       - put: infrastructure-ci-bbl-states
         params:
           repository: updated-bbl-state
           rebase: true
   - task: update-integration-config
     file: cf-deployment-concourse-tasks/update-integration-configs/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     input_mapping:
       integration-configs: ci
     params:
@@ -832,20 +836,19 @@ jobs:
       do:
       - task: delete-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         params:
           BBL_STATE_DIR: consul-cf-cats
         input_mapping:
           bbl-state: updated-bbl-state
       - task: cleanup-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         params:
           BBL_STATE_DIR: consul-cf-cats
         input_mapping:
           bbl-state: updated-bbl-state
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
+        image: cf-deployment-concourse-tasks-w-gcloud-image
         params:
           BBL_STATE_DIR: consul-cf-cats
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -858,18 +861,20 @@ jobs:
           bbl-states-repo: updated-bbl-state
       - task: bbl-destroy
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: consul-cf-cats
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+          BBL_GCP_REGION: {{gcp_region}}
+          BBL_GCP_ZONE: {{gcp_zone}}
       - put: infrastructure-ci-bbl-states
         params:
           repository: updated-bbl-state
           rebase: true
   - task: run-cats
     file: cats-concourse-task/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     input_mapping: {integration-config: updated-integration-configs }
     params:
       CONFIG_FILE_PATH: artifacts/cats_config.json
@@ -877,20 +882,19 @@ jobs:
       do:
       - task: delete-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         params:
           BBL_STATE_DIR: consul-cf-cats
         input_mapping:
           bbl-state: updated-bbl-state
       - task: cleanup-cf-deployment
         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         params:
           BBL_STATE_DIR: consul-cf-cats
         input_mapping:
           bbl-state: updated-bbl-state
       - task: remove-from-gcp-dns
         file: ci/scripts/common/manage-gcp-dns/task.yml
+        image: cf-deployment-concourse-tasks-w-gcloud-image
         params:
           BBL_STATE_DIR: consul-cf-cats
           GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -903,11 +907,14 @@ jobs:
           bbl-states-repo: updated-bbl-state
       - task: bbl-destroy
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: consul-cf-cats
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+          BBL_GCP_REGION: {{gcp_region}}
+          BBL_GCP_ZONE: {{gcp_zone}}
       - put: infrastructure-ci-bbl-states
         params:
           repository: updated-bbl-state
