Use releases of cf-deployment-concourse-tasks for consul pipeline.
Signed-off-by: Desmond Pompa Alarcon Rawls <drawls@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -42,10 +42,10 @@ resources:
     uri: https://github.com/cloudfoundry/cf-deployment.git
 
 - name: cf-deployment-concourse-tasks
-  type: git
+  type: github-release
   source:
-    branch: master
-    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
+    owner: cloudfoundry
+    repository: cf-deployment-concourse-tasks
 
 - name: cf-deployment-concourse-tasks-w-gcloud-image
   type: docker-image
