--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -46,6 +46,7 @@ resources:
   source:
     owner: cloudfoundry
     repository: cf-deployment-concourse-tasks
+    access_token: {{cf_infra_bot_user_github_access_token}}
 
 - name: cf-deployment-concourse-tasks-w-gcloud-image
   type: docker-image
