Use git resource on cf-deployment-concourse tasks.
[#152005543]

Signed-off-by: Desmond Pompa Alarcon Rawls <drawls@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -42,11 +42,10 @@ resources:
     uri: https://github.com/cloudfoundry/cf-deployment.git
 
 - name: cf-deployment-concourse-tasks
-  type: github-release
+  type: git
   source:
-    owner: cloudfoundry
-    repository: cf-deployment-concourse-tasks
-    access_token: {{cf_infra_bot_user_github_access_token}}
+    master: cloudfoundry
+    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
 
 - name: cf-deployment-concourse-tasks-w-gcloud-image
   type: docker-image
@@ -192,7 +191,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
     - get: stemcell
       resource: gcp-stemcell
       trigger: true
@@ -275,7 +273,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
     params:
@@ -308,7 +305,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
     - get: stemcell
       resource: gcp-stemcell
       trigger: true
@@ -390,7 +386,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
     params:
@@ -445,7 +440,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
     - get: windows-stemcell
       trigger: true
   - task: bbl-up
@@ -527,7 +521,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
     params:
@@ -559,7 +552,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     params:
@@ -640,7 +632,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
     params:
@@ -671,7 +662,6 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-      version: { tag: "v4.16" }
     - get: cf-deployment-concourse-tasks-w-gcloud-image
     - get: ops-files
       resource: empty-ops-files
