azure-acceptance-tests block CF deployment tests
Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -425,6 +425,7 @@ jobs:
       trigger: true
       passed:
       - aws-acceptance-tests
+      - azure-acceptance-tests
       - gcp-acceptance-tests
       - aws-concourse-acceptance-tests
       - gcp-concourse-acceptance-tests
